--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -2,10 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.tencent.qcloud.xiaozhibo"
+        applicationId "test.mogui.com"
         versionName "1.0"
         versionCode 1
         minSdkVersion 19
